tests/baselines/reference/InvalidNonInstantiatedModule.errors.txt
InvalidNonInstantiatedModule.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
InvalidNonInstantiatedModule.ts(5,9): error TS2708: Cannot use namespace 'M' as a value.
InvalidNonInstantiatedModule.ts(7,15): error TS2708: Cannot use namespace 'M' as a value.


==== InvalidNonInstantiatedModule.ts (3 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface Point { x: number; y: number }
    }
    
    var m = M; // Error, not instantiated can not be used as var
            ~
!!! error TS2708: Cannot use namespace 'M' as a value.
    
    var x: typeof M; // Error only a namespace
                  ~
!!! error TS2708: Cannot use namespace 'M' as a value.
    